--- a/src/Index.html
+++ b/src/Index.html
@@ -5,11 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projeto controle e descarte de EPI</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="Reset.css">
+        <title>For EPI </title>
+        <link rel="shortcut icon" href="./assets/img/Logo.png" type="img/x-png" />
         <link rel="stylesheet" href="Style.css">
         <script src="https://unpkg.com/feather-icons"></script>
     </head>
