S01 - 27/04/2022 - Letícia - Ajustes na Estrutura do HTML e Criação de Section do Menu Lateral

--- a/src/Index.html
+++ b/src/Index.html
@@ -12,10 +12,14 @@
     </head>
 
     <body>
-        <header>
-            <img src="assets/img/Logo.png" style="height: 80px; width: 80px; margin: 10px;">
-            <h1 class="Title">Área do Administrador</h1>
-            <nav>
+         <header>
+            <div class="line-home"></div>
+            <div class="container">
+                <img class="logo" src="assets/img/Logo.png" alt="Logo" />
+                <p class="titulo">Você Está na Área do Administrador!</p>
+            </div>
+        </header> 
+       <section class="Menu">
                 <i class="Icon" data-feather="user"></i>
                 <i class="Icon" data-feather="user-check"></i>
                 <i class="Icon" data-feather="trending-up"></i>
@@ -24,7 +28,7 @@
                 <i class="Icon" data-feather="alert-triangle"></i>
                 <i class="Icon gambiarra" data-feather="log-out"></i>
             </nav>
-        </header>
+        </section>
         <div class="linha-vertical"></div>
         <div class="linha-horizontal"></div>
         <script>
