S01 - 27/04/2022 - Letícia - Criação do Rodapé com Copyright

--- a/src/Index.html
+++ b/src/Index.html
@@ -26,11 +26,16 @@
                 <i class="Icon" data-feather="check-square"></i>
                 <i class="Icon" data-feather="book-open"></i>
                 <i class="Icon" data-feather="alert-triangle"></i>
-                <i class="Icon gambiarra" data-feather="log-out"></i>
+                <i class="Icon log-out" data-feather="log-out"></i>
             </nav>
         </section>
         <div class="linha-vertical"></div>
         <div class="linha-horizontal"></div>
+        <footer>
+            <div >
+                <p class="copyright">&copy; Copyright - For EPI - 2022</p>
+            </div>
+        </footer>
         <script>
             feather.replace()
         </script>
