S01 - 27/04/2022 - Letícia - Criação do Rodapé com Copyright

--- a/src/Index.html
+++ b/src/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,30 +11,31 @@
     </head>
 
     <body>
-         <header>
+        <header>
             <div class="line-home"></div>
             <div class="container">
                 <img class="logo" src="assets/img/Logo.png" alt="Logo" />
                 <p class="titulo">Você Está na Área do Administrador!</p>
             </div>
         </header> 
-       <section class="Menu">
+        <section class="Menu">
+            <nav>
                 <i class="Icon" data-feather="user"></i>
                 <i class="Icon" data-feather="user-check"></i>
                 <i class="Icon" data-feather="trending-up"></i>
                 <i class="Icon" data-feather="check-square"></i>
                 <i class="Icon" data-feather="book-open"></i>
                 <i class="Icon" data-feather="alert-triangle"></i>
-                <i class="Icon log-out" data-feather="log-out"></i>
+                <i class="Icon gambiarra" data-feather="log-out"></i>
             </nav>
         </section>
         <div class="linha-vertical"></div>
         <div class="linha-horizontal"></div>
         <footer>
             <div >
-                <p class="copyright">&copy; Copyright - For EPI - 2022</p>
+                <p class="copyright">&copy; Copyright For EPI - 2022</p>
             </div>
-        </footer>
+          </footer>
         <script>
             feather.replace()
         </script>
