S01 - 03/05/2022 - Cristhyam - Implementação de linhadivisoria vertical.

--- a/src/Selection-Screen.html
+++ b/src/Selection-Screen.html
@@ -21,6 +21,9 @@
                 <i class="Icon" data-feather="user"></i> 
                 <h4 class="Login">Login</h4> 
             </div>
+            <div class="linha-vertical"></div>
+
+
 
         </nav>
         <script>
