--- a/src/Selection-Screen.html
+++ b/src/Selection-Screen.html
@@ -12,20 +12,26 @@
 
     <body>
         <nav>
+            <img class="logo" src="Assets/img/Logo - For EPI 2.png" alt="Logo" />
+            <div class="Container">
             <div class="Square"> 
                 <i class="Icon" data-feather="user"></i>
-                <h4>Cadastro</h4>
+                <h4 class="cadastro">Cadastro</h4>
             </div>
 
             <div class="Square">
                 <i class="Icon" data-feather="user"></i> 
                 <h4 class="Login">Login</h4> 
             </div>
-            <div class="linha-vertical"></div>
-
-
-
+            </div>
         </nav>
+
+        <div class="Bottom-Confirm">
+            <h4 class="confirmar">Confirmar</h4>
+        </div>
+
+        <div class="linha-vertical"></div>
+
         <script>
             feather.replace()
         </script>
