--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>For EPI </title>
-        <link rel="shortcut icon" href="./assets/img/Logo.png" type="img/x-png" />
-        <link rel="stylesheet" href="Style.css">
+        <link rel="shortcut icon" href="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/Assets/img/Logo - For EPI 2.png" type="img/x-png" />
+        <link rel="stylesheet" href="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/css/Style.index.css">
         <script src="https://unpkg.com/feather-icons"></script>
     </head>
 
