S01 – 10/05/2022 – Letícia – Ajustes nos caminhos do CSS e Imagens

--- a/src/html/Page-Home.html
+++ b/src/html/Page-Home.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/css/Style-Home.css">
+    <link rel="stylesheet" href="../css/Style-Home.css">
 </head>
 <body>
 
     <div class="logo">
-        <img class = "logo2" src="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/Assets/img/Logo - For EPI 2.png" alt="LOGO FOR EPI"> 
+        <img class = "logo2" src="../Assets/img/Logo - For EPI 2.png" alt="LOGO FOR EPI"> 
     </div>
     
     <main class="container">   
