--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tela de Login</title>
-  <link rel="stylesheet" href="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/css/Style-TelaLogin.css">
+  <link rel="shortcut icon" href="../Assets/img/Logo - For EPI 2.png" type="img/x-png" />
+  <link rel="stylesheet" href="../css/Style-TelaLogin.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
           </ul>
       </header>
   <div class="logo">
-        <img class = "logo2" src="/pmv-sint-2022-1-e1-proj-web-t1-grupo-08/src/Assets/img/Logo - For EPI 2.png" alt="Logo FOR EPI"> 
+        <img class = "logo2" src="../Assets/img/Logo - For EPI 2.png" alt="Logo FOR EPI"> 
   </div>  
   <div class="container">
     <div class="container_box">
