--- a/src/html/Page-Home.html
+++ b/src/html/Page-Home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seleção de Usuário</title>
+    <link rel="shortcut icon" href="../Assets/img/Logo - For EPI 2.png" type="img/x-png" />
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="../css/Style-Home.css">
 </head>
