--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina inicial</title>
     <link rel="stylesheet" href="../css/Style-Index.css">
     <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="shortcut icon" href="../Assets/img/Logo - For EPI 2.png" type="img/x-png" />
 </head>
 <body>
 
@@ -46,7 +47,7 @@
                       <input type="text" name="CPF" id="CPF">
                       <label for="Number-cel">Número de Telefone</label>
                       <input type="text" name="Number-Cel" id="Number-cel">
-                      <label for="ID">ID do Craichá</label>
+                      <label for="ID">ID do Crachá</label>
                       <input type="text" name="ID" id="ID">
                       <label for="cargo">Cargo</label>
                       <Input type="Text" name="cargo" id="cargo">  
