S01 - 11/05/2022 - Cristhyam - Adicionando url de transição onclick na pagina de login.

--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -32,7 +32,9 @@
           <input id="user" type="text" name="user" autocomplete="off">
           <label for="password">Password</label>
           <input type="password" name="password" id="password">
-          <input type="submit" class="btn" value="Login">
+          <a href="../html/Index.html">
+            <input type="submit" name="Login" class="btn" value="Login"/>
+          </a>
         </form>
         <p>Forgot password?</p>
       </div>
