S01 - 29/05/2022 - Cristhyam - Corrigindo Bug de funcionalidades

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -54,17 +54,17 @@
                         <h3 class="active log title">Colaboradores</h3>
                     </div>
                     <div class="form form_login">
-                        <form id="preventdefault">
+                        <form id="">
                             <label for="user">Nome do Colaborador</label>
-                            <input id="user" type="text" name="user" autocomplete="off">
+                            <input id="" type="text" name="user" autocomplete="off">
                             <label for="CPF">CPF</label>
-                            <input type="text" name="CPF" id="CPF">
+                            <input type="text" name="CPF" id="">
                             <label for="Number-cel">Número de Telefone</label>
-                            <input type="text" name="Number-Cel" id="Number-cel">
+                            <input type="text" name="Number-Cel" id="">
                             <label for="ID">ID do Crachá</label>
-                            <input type="text" name="ID" id="ID">
+                            <input type="text" name="ID" id="">
                             <label for="cargo">Cargo</label>
-                            <Input type="Text" name="cargo" id="cargo">
+                            <Input type="Text" name="cargo" id="">
                             <button onclick="adiciona()" class="btn">Cadastrar</button>
                             <form />
                             <p>Precisa de Ajuda?</p>
@@ -83,7 +83,7 @@
                     <div class="form form_login">
                         <form id="preventdefault">
                             <label for="user">Nome do Colaborador</label>
-                            <input id="user" type="text" name="user" autocomplete="off">
+                            <input type="text" name="user" id="user" autocomplete="off">
                             <label for="CPF">CPF</label>
                             <input type="text" name="CPF" id="CPF">
                             <label for="Number-cel">Número de Telefone</label>
@@ -108,14 +108,14 @@
                         <h3 class="active log title">Busca de EPI</h3>
                     </div>
                     <div class="form form_login">
-                        <form id="preventdefault">
+                        <form id="">
                             <label for="user">Nome do Colaborador</label>
-                            <input id="user" type="text" name="user" autocomplete="off">
+                            <input id="" type="text" name="user" autocomplete="off">
                             <label for="CPF">CPF</label>
-                            <input type="text" name="CPF" id="CPF">
+                            <input type="text" name="CPF" id="">
                             <label for="Number-cel">Número de Telefone</label>
-                            <input type="text" name="Number-Cel" id="Number-cel">
-                            <label for="ID">ID do Crachá</label>
+                            <input type="text" name="Number-Cel" id="">
+                            <label for="xxxxx">ID do Crachá</label>
                             <input type="text" name="ID" id="ID">
                             <label for="cargo">Cargo</label>
                             <Input type="Text" name="cargo" id="cargo">
@@ -135,19 +135,19 @@
                         <h3 class="active log title">Cadastro de EPI</h3>
                     </div>
                     <div class="form form_login">
-                        <form id="preventdefault">
+                        <form id="">
                             <label for="EPI">Tipo de EPI</label>
-                            <input id="EPI" type="text" name="EPI" autocomplete="off">
+                            <input type="text" name="EPI" autocomplete="off" id="EPIx">
                             <label for="CA">Certificado de aprovação (CA)</label>
-                            <input type="text" name="CA" id="CA">
+                            <input type="text" name="CA" id="CAx">
                             <label for="NumberLote">Número do Lote</label>
-                            <input type="text" name="Number-Lote" id="Number-Lote">
+                            <input type="text" name="Number-Lote" id="NLx">
                             <label for="Fabricante">Fabricante</label>
-                            <input type="text" name="Fabricante" id="Fabricante">
+                            <input type="text" name="Fabricante" id="Fabricantex">
                             <label for="DataVal">Data de validade</label>
-                            <Input type="Text" name="DataVal" id="DataVal">
+                            <Input type="Text" name="DataVal" id="DataValx">
                             <label for="DataEnter">Data de entrada</label>
-                            <Input type="Text" name="DataEnter" id="DataEnter">
+                            <Input type="Text" name="DataEnter" id="DataEnterx">
                             <button onclick="adiciona()" class="btn">Cadastrar</button>
                             <form />
                             <p>Precisa de Ajuda?</p>
@@ -161,23 +161,23 @@
             <div class="container">
                 <div class="Container_boxAvisoEPI">
                     <div class="lg">
-                        <h3 class="active log title">Cadastro de EPI</h3>
+                        <h3 class="active log title">Alerta de EPI</h3>
                     </div>
                     <div class="form form_login">
-                        <form id="preventdefault">
+                        <form id="">
                             <label for="EPI">Tipo de EPI</label>
-                            <input id="EPI" type="text" name="EPI" autocomplete="off">
+                            <input id="" type="text" name="EPI" autocomplete="off">
                             <label for="CA">Certificado de aprovação (CA)</label>
-                            <input type="text" name="CA" id="CA">
+                            <input type="text" name="CA" id="">
                             <label for="NumberLote">Número do Lote</label>
-                            <input type="text" name="Number-Lote" id="Number-Lote">
+                            <input type="text" name="Number-Lote" id="">
                             <label for="Fabricante">Fabricante</label>
-                            <input type="text" name="Fabricante" id="Fabricante">
+                            <input type="text" name="Fabricante" id="">
                             <label for="DataVal">Data de validade</label>
-                            <Input type="Text" name="DataVal" id="DataVal">
+                            <Input type="Text" name="DataVal" id="">
                             <label for="DataEnter">Data de entrada</label>
-                            <Input type="Text" name="DataEnter" id="DataEnter">
-                            <button onclick="adiciona()" class="btn">Cadastrar</button>
+                            <Input type="Text" name="DataEnter" id=">
+                            <button onclick=" adiciona()" class="btn">Cadastrar</button>
                             <form />
                             <p>Precisa de Ajuda?</p>
                     </div>
