--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -53,28 +53,17 @@
                     <div class="lg">
                         <h3 class="active log title">Colaboradores</h3>
                     </div>
-                    <div class="form form_login">
-                        <form id="">
-                            <label for="user">Nome do Colaborador</label>
-                            <input id="" type="text" name="user" autocomplete="off">
-                            <label for="CPF">CPF</label>
-                            <input type="text" name="CPF" id="">
-                            <label for="Number-cel">Número de Telefone</label>
-                            <input type="text" name="Number-Cel" id="">
-                            <label for="ID">ID do Crachá</label>
-                            <input type="text" name="ID" id="">
-                            <label for="cargo">Cargo</label>
-                            <Input type="Text" name="cargo" id="">
-                            <button onclick="adiciona()" class="btn">Cadastrar</button>
-                            <form />
-                            <p>Precisa de Ajuda?</p>
+                    <div id="ButtonBuscaColab">
+
                     </div>
+                    <button onclick="buscaDados()">Buscar Dados</button>
+
                 </div>
             </div>
         </div>
 
         <!-- Tela de cadastro de Colaborador -->
-        <div class="Container_main mainColab">
+        <div class=" Container_main mainColab">
             <div class="container">
                 <div class="container_box">
                     <div class="lg">
@@ -83,7 +72,7 @@
                     <div class="form form_login">
                         <form id="preventdefault">
                             <label for="user">Nome do Colaborador</label>
-                            <input type="text" name="user" id="user" autocomplete="off">
+                            <input type="text" name="user" autocomplete="off" id="user">
                             <label for="CPF">CPF</label>
                             <input type="text" name="CPF" id="CPF">
                             <label for="Number-cel">Número de Telefone</label>
@@ -100,7 +89,7 @@
             </div>
         </div>
 
-        <!-- Tela para buscar EPI -->
+        <!-- Tela para buscar EPI
         <div class="Container_main relacaoEPI">
             <div class="container">
                 <div class="container_buscaEPI">
@@ -116,16 +105,16 @@
                             <label for="Number-cel">Número de Telefone</label>
                             <input type="text" name="Number-Cel" id="">
                             <label for="xxxxx">ID do Crachá</label>
-                            <input type="text" name="ID" id="ID">
+                            <input type="text" name="ID" id="">
                             <label for="cargo">Cargo</label>
-                            <Input type="Text" name="cargo" id="cargo">
+                            <Input type="Text" name="cargo" id="">
                             <button onclick="adiciona()" class="btn">Cadastrar</button>
                             <form />
                             <p>Precisa de Ajuda?</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Tela de cadastro de EPI -->
         <div class="Container_main mainEPI">
@@ -135,7 +124,7 @@
                         <h3 class="active log title">Cadastro de EPI</h3>
                     </div>
                     <div class="form form_login">
-                        <form id="">
+                        <form id="preventdefault2">
                             <label for="EPI">Tipo de EPI</label>
                             <input type="text" name="EPI" autocomplete="off" id="EPIx">
                             <label for="CA">Certificado de aprovação (CA)</label>
@@ -148,7 +137,7 @@
                             <Input type="Text" name="DataVal" id="DataValx">
                             <label for="DataEnter">Data de entrada</label>
                             <Input type="Text" name="DataEnter" id="DataEnterx">
-                            <button onclick="adiciona()" class="btn">Cadastrar</button>
+                            <button onclick="adicionaEPI()" class="btn">Cadastrar</button>
                             <form />
                             <p>Precisa de Ajuda?</p>
                     </div>
@@ -156,7 +145,7 @@
             </div>
         </div>
 
-        <!-- Tela de notificação de EPI vencido -->
+        <!-- Tela de notificação de EPI vencido
         <div class="Container_main warningEPI">
             <div class="container">
                 <div class="Container_boxAvisoEPI">
@@ -184,21 +173,21 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
-    <!-- <footer>
+        <!-- <footer>
         <div>
             <p class="copyright">&copy; Copyright For EPI - 2022</p>
         </div>
     </footer> -->
 
 
-    <script>
-        feather.replace()
-    </script>
-    <script src="../JS/index.js"></script>
-    <script src="https://unpkg.com/feather-icons"></script>
+        <script>
+            feather.replace()
+        </script>
+        <script src="../JS/index.js"></script>
+        <script src="https://unpkg.com/feather-icons"></script>
 </body>
 
 </html>
