--- a/src/html/Tela-login.html
+++ b/src/html/Tela-login.html
@@ -13,10 +13,10 @@
 <body>
     <header>
           <ul>
-            <li class="active-2"> <a href=""> Você está na área do administrador </a> </li>
-            <li><a href="">Ajuda</a></li>
+              <li class="active"> <a href=""> Você está na área do administrador </a> </li>
+              <li> <a href=""> O que somos?</a> </li>
           </ul>
-      </header>
+    </header>
   <div class="logo">
         <img class = "logo2" src="../Assets/img/Logo - For EPI 2.png" alt="Logo FOR EPI"> 
   </div>  
