S01 - 30/05/2022 - Letícia - Ajuste no fechamento da tag Form e Menu de navegação

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -20,9 +20,11 @@
         <div class="linha-horizontal"></div>
     </div>
 
-    <header>
-        <h4>Você está na Área do Administrador!</h4>
-        <h4>Ajuda</h4>
+     <header>
+        <ul>
+          <li class="active"> <a href=""> Você está na tela inicial! </a> </li>
+          <li> <a href=""> O que somos?</a> </li>
+        </ul>
     </header>
 
     <div class="Container-geral">
@@ -82,7 +84,7 @@
                             <label for="cargo">Cargo</label>
                             <Input type="Text" name="cargo" id="cargo">
                             <button onclick="adiciona()" class="btn">Cadastrar</button>
-                            <form />
+                            </form>
                             <p>Precisa de Ajuda?</p>
                     </div>
                 </div>
