--- a/src/html/Page-Home.html
+++ b/src/html/Page-Home.html
@@ -25,7 +25,7 @@
             <p>Administrador</p>
         </div>
 
-        <div class="colaborador" onclick="changeBgColor('#00FF7F')">
+        <div class="colaborador" onclick="changeBgColor2('#00FF7F')">
             <div class="circle">
                 <i class="icon" data-feather="user"></i>
             </div>
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <script src="../JS/Scripti-PageHome.js"></script>
+    <script src="../JS/Script-PageHome.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <script>feather.replace()</script>
 </body>
