S01 - 01/06/2022 - Letícia - Ajuste no fechamento do form

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -140,7 +140,7 @@
                             <label for="DataEnter">Data de entrada</label>
                             <Input type="Text" name="DataEnter" id="DataEnterx">
                             <button onclick="adicionaEPI()" class="btn">Cadastrar</button>
-                            <form />
+                            </form>
                             <p>Precisa de Ajuda?</p>
                     </div>
                 </div>
