S01 -01/06/2022 - Cristhyam - Adicionando Tela de busca de EPI

--- a/src/html/Index.html
+++ b/src/html/Index.html
@@ -20,10 +20,10 @@
         <div class="linha-horizontal"></div>
     </div>
 
-     <header>
+    <header>
         <ul>
-          <li class="active"> <a href=""> Você está na tela inicial! </a> </li>
-          <li> <a href=""> O que somos?</a> </li>
+            <li class="active"> <a href=""> Você está na tela inicial! </a> </li>
+            <li> <a href=""> O que somos?</a> </li>
         </ul>
     </header>
 
@@ -84,39 +84,27 @@
                             <label for="cargo">Cargo</label>
                             <Input type="Text" name="cargo" id="cargo">
                             <button onclick="adiciona()" class="btn">Cadastrar</button>
-                            </form>
-                            <p>Precisa de Ajuda?</p>
+                        </form>
+                        <p>Precisa de Ajuda?</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Tela para buscar EPI
+        <!-- Tela para buscar EPI -->
         <div class="Container_main relacaoEPI">
             <div class="container">
                 <div class="container_buscaEPI">
                     <div class="lg">
                         <h3 class="active log title">Busca de EPI</h3>
                     </div>
-                    <div class="form form_login">
-                        <form id="">
-                            <label for="user">Nome do Colaborador</label>
-                            <input id="" type="text" name="user" autocomplete="off">
-                            <label for="CPF">CPF</label>
-                            <input type="text" name="CPF" id="">
-                            <label for="Number-cel">Número de Telefone</label>
-                            <input type="text" name="Number-Cel" id="">
-                            <label for="xxxxx">ID do Crachá</label>
-                            <input type="text" name="ID" id="">
-                            <label for="cargo">Cargo</label>
-                            <Input type="Text" name="cargo" id="">
-                            <button onclick="adiciona()" class="btn">Cadastrar</button>
-                            <form />
-                            <p>Precisa de Ajuda?</p>
+                    <div id="ButtonBuscaEPI">
+                        <button onclick="buscaDadosEPI()">Buscar Dados</button>
                     </div>
+
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- Tela de cadastro de EPI -->
         <div class="Container_main mainEPI">
